# herai

./: .gitignore  README.md  index.html  main.py  package-lock.json  package.json  setup.cfg
resources/: catalogue.yaml  neuro_config.ini
src/: process.js
src/services/: livermask.js
static/css/: custom_style.css
templates/: application_template.jinja2  catalogue.jinja2  index.jinja2  livermask.jinja2  processing.jinja2
