[metadata]
name = SINTEFMedIACatalogue
version = 0.0.1
url = localhost:5000
license =
maintainer =
maintainer_email =
description = Machine learning catalogue and showroom for the SINTEF Medical Image Analysis group.
long_description =
long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires =
    Flask
    PyYaml
    Jinja2

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    flaskr